fixed issue #3 - documentation header issue on mobile

--- a/documentation/css/styles.css
+++ b/documentation/css/styles.css
@@ -138,13 +138,6 @@
   -ms-flex-pack: center;
   justify-content: center;
 }
-.mdl-demo section > .section__play-btn {
-  min-height: 200px;
-}
-.section__play-btn{
-  background-image: url('../images/material.jpg');
-  background-size: cover;
-}
 .mdl-demo section > header > .material-icons {
   font-size: 3rem;
 }
@@ -153,27 +146,6 @@
   z-index: 99;
   top: 8px;
   right: 8px;
-}
-.mdl-demo section .section__circle {
-  display: -webkit-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -webkit-align-items: center;
-  -ms-flex-align: center;
-  align-items: center;
-  -webkit-box-pack: start;
-  -webkit-justify-content: flex-start;
-  -ms-flex-pack: start;
-  justify-content: flex-start;
-  -webkit-box-flex: 0;
-  -webkit-flex-grow: 0;
-  -ms-flex-positive: 0;
-  flex-grow: 0;
-  -webkit-flex-shrink: 1;
-  -ms-flex-negative: 1;
-  flex-shrink: 1;
 }
 .mdl-demo section .section__text {
   -webkit-box-flex: 1;
@@ -260,6 +232,16 @@
   z-index: 99;
 }
 
+
+
+.mdl-demo section > .section__play-btn {
+  min-height: 200px;
+}
+.section__play-btn{
+  background-image: url('../images/material.jpg');
+  background-size: cover;
+}
+
 .github-button-wrapper{
   margin-left: 30px;
   margin-top:10px;
@@ -272,4 +254,8 @@
 
 #directives button, #directives .mdl-radio{
   margin-right: 10px;
+}
+
+.mdl-layout__header{
+  z-index: 1;
 }
